--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
@@ -53,9 +53,9 @@
             </ul>
             <form>
                 <h2>Volg je pakket</h2>
-                <label for="Barcode of niet-thuiscode">Barcode of niet-thuiscode</label>
+                <label for="Barcode-niet-thuiscode">Barcode of niet-thuiscode</label>
                 <input type="text" placeholder="Barcode (3S of KG)">
-                <label for="Land van de ontvanger">Land van de ontvanger</label>
+                <label for="Land-van-de-ontvanger">Land van de ontvanger</label>
                 <input type="text" placeholder="Nederland">
                 <label for="Postcode">Postcode</label>
                 <input type="text" placeholder="Postcode">
@@ -65,9 +65,9 @@
         </section>
 
         <section class="search-bar">
-            <h2>Ik ben opzoek naar...</h3>
-                <input type="text" placeholder="Wat zoek je?">
-                <img src="img/searchbutton.svg" alt="zoeken">
+            <h3>Ik ben opzoek naar...</h3>
+            <input type="text" placeholder="Wat zoek je?">
+            <img src="img/searchbutton.svg" alt="zoeken">
         </section>
 
         <section class="voorkeuren-rood">
@@ -148,24 +148,55 @@
                         <h2>Versturen</h2>
                         <img src="img/arrowright.svg" alt="pijl">
                     </li>
-                    <li>Ontvangen</li>
-                    <img src="img/arrowright.svg" alt="pijl">
+                    <li>
+                        <h2>Ontvangen</h2>
+                        <img src="img/arrowright.svg" alt="pijl">
+                    </li>
+                </ul>
             </section>
             <section>
-                <li>Zakelijke oplossingen</li>
-                <img src="img/arrowright.svg" alt="pijl">
-                <li>Webshop</li>
+                <ul>
+                    <li>
+                        <h2>Zakelijke oplossingen</h2>
+                        <img src="img/arrowright.svg" alt="pijl">
+                    </li>
+                    <li>
+                        <h2>Webshop</h2>
+                        <img src="img/arrowright.svg" alt="pijl">
+                    </li>
+                    
+                </ul>
             </section>
-            <img src="img/arrowright.svg" alt="pijl">
-            <li>Direct regelen</li>
-            <img src="img/arrowright.svg" alt="pijl">
-            <li>PostNL-app</li>
-            <img src="img/arrowright.svg" alt="pijl">
-            <li>Hulp</li>
-            <img src="img/arrowright.svg" alt="pijl">
-            <li>Over PostNL</li>
+
+            <section>
+                <ul>
+                    <li>
+                        <h2>Direct regelen</h2>
+                        <img src="img/arrowright.svg" alt="pijl">
+                    </li>
+
+                    <li>
+                        <h2>PostNL-app</h2>
+                    <img src="img/arrowright.svg" alt="pijl">
+                    </li>
+                </ul>
+            </section>
+
+            <section>
+                <ul>
+                    <li>
+                        <h2>Hulp</h2>
+                        <img src="img/arrowright.svg" alt="pijl">
+                    </li>
+
+                    <li>
+                        <h2>Over PostNL</h2>
+                        <img src="img/arrowright.svg" alt="pijl">
+                    </li>
+                </ul>
+            </section>
         </nav>
-        </ul>
+
 
         <section class="footer-bottom">
             <img src="img/postnl.svg" alt="Postnl-logo">
