--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <form>
                 <h2>Volg je pakket</h2>
                 <label for="Barcode-niet-thuiscode">Barcode of niet-thuiscode</label>
-                <input type="text" placeholder="Barcode (3S of KG)">
+                <input type="text" id="barcode-niet-thuiscode" placeholder="Barcode (3S of KG)">
                 <label for="Land-van-de-ontvanger">Land van de ontvanger</label>
-                <input type="text" placeholder="Nederland">
+                <input type="text" id="land-van-de-ontvanger" placeholder="Nederland">
                 <label for="Postcode">Postcode</label>
-                <input type="text" placeholder="Postcode">
+                <input type="text" id="postcode" placeholder="Postcode">
                 <button>Zoeken</button>
             </form>
 
@@ -98,10 +98,10 @@
 
         <section class="Fotokaart">
             <img src="img/photocard.svg" alt="afbeelding">
-            <h2>Met de PostNL-app heb je alles in de hand</h3>
+            <h2>Met de PostNL-app heb je alles in de hand</h2>
                 <p>Regel al je PostNL-zaken zoals jij dat wil. Maak en verstuur een fotokaart, koop een postzegelcode of
                     bekijk welke post en pakketten er naar je onderweg zijn. Miljoenen tevreden gebruikers gingen je
-                    voor. Ben jij de volgende? Download ‘m nu!</p>
+                    voor. Ben jij de volgende? Download'm nu!</p>
                 <div>
                     <button>versturen</button>
                     <a>Link</a>
