#4 feedback verwerkt label

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             </ul>
             <form>
                 <h2>Volg je pakket</h2>
-                <label for="Barcode-niet-thuiscode">Barcode of niet-thuiscode</label>
+                <label for="barcode-niet-thuiscode">Barcode of niet-thuiscode</label>
                 <input type="text" id="barcode-niet-thuiscode" placeholder="Barcode (3S of KG)">
-                <label for="Land-van-de-ontvanger">Land van de ontvanger</label>
+                <label for="land-van-de-ontvanger">Land van de ontvanger</label>
                 <input type="text" id="land-van-de-ontvanger" placeholder="Nederland">
-                <label for="Postcode">Postcode</label>
+                <label for="postcode">Postcode</label>
                 <input type="text" id="postcode" placeholder="Postcode">
                 <button>Zoeken</button>
             </form>
