--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="top-bar">
-            <p>Consument</p>
-            <p>Zakelijk</p>
+            <p class="Consument">Consument</p>
+            <p class="Zakelijk">Zakelijk</p>
             <img src="img/shoppingcart.svg" alt="winkelwagen">
         </div>
         <nav class="nav-bar">
