--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
 
         <section class="order-card">
             <ul class="order-list">
-                <li>
-                    
+                <li class="li-track">
+                    <a>
                     <img class="tracking" src="img/tracking.svg" alt="trace">
-                    <span class="tracking-p">Volg je pakket</span>
-                    
-                    <!-- <p class="tracking-p">Volg je pakket</p> -->
+                    </a>
+                    <p class="tracking-p">Volg je pakket</p>
                 </li>
                 <li>
                     <img src="img/sendlogo.svg" alt="versturen">
@@ -111,6 +110,7 @@
 
         <section class="postzegel">
             <img src="img/phone.svg" alt="afbeelding" width="100px">
+            <h3>Nu 1 postzegel nodig?</h3>
             <p>Verstuur je brief of kaart met een Postzegelcode</p>
             <div class="link-border-postzegel">
                 <a>Link</a>
