--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="zakelijk">Zakelijk</a>
             <img src="img/shoppingcart.svg" alt="winkelwagen">
         </nav>
-        
+
         <nav class="nav-bar">
             <img src="img/postnl.svg" alt="PostNL">
             <a>Inloggen</a>
@@ -43,7 +43,7 @@
         </section>
 
 
-        <ul class="order-list">
+        <ul class="order-lijst">
             <li class="li-track">
                 <a>
                     <img class="tracking" src="img/tracking.svg" alt="trace">
@@ -91,7 +91,7 @@
         </form>
 
 
-        <section class="search-bar">
+        <section class="zoek-bar">
             <h3>Ik ben opzoek naar...</h3>
             <input type="text" placeholder="Wat zoek je?">
             <button class="searchbutton">
