--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <header>
         <nav class="top-bar">
-            <a class="consumer">Consument</a>
-            <a class="professional">Zakelijk</a>
+            <a href="#" class="consumer">Consument</a>
+            <a href="#" class="professional">Zakelijk</a>
             <img src="img/shoppingcart.svg" alt="winkelwagen">
         </nav>
 
         <nav class="nav-bar">
             <img src="img/postnl.svg" alt="PostNL">
-            <a>Inloggen</a>
+            <a href="#">Inloggen</a>
             <img class="arrowdown" src="img/arrowdown.svg" alt="">
             <img src="img/menu.svg" alt="menu">
         </nav>
@@ -33,7 +33,7 @@
                 <h1>Grenzeloos groeien met je webwinkel</h1>
                 <p>Verstuur het voordelig als brievenbuspakje</p>
                 <button class="button1">lees meer</button>
-                <a>Link</a>
+                <a href="#">Link</a>
             </div>
 
             <div class="hero-img">
@@ -45,25 +45,25 @@
 
         <ul class="order-list">
             <li class="li-track">
-                <a>
+                <a href="#">
                     <img class="tracking" src="img/tracking.svg" alt="trace">
                 </a>
                 <p class="tracking-p">Volg je pakket</p>
             </li>
             <li>
-                <a>
+                <a href="#">
                     <img src="img/sendlogo.svg" alt="versturen">
                 </a>
                 <p class="send-p">versturen</p>
             </li>
             <li class="location">
-                <a>
+                <a href="#">
                     <img src="img/location.svg" alt="locatie">
                 </a>
                 <p class="location-p">locaties</p>
             </li>
             <li>
-                <a>
+                <a href="#">
                     <img src="img/postcode.svg" alt="postcode">
                 </a>
                 <p class="postcode-p">Postcodes</p>
@@ -103,21 +103,21 @@
             <img src="img/plant.svg" alt="afbeelding" width="150px">
             <h2>Voorkeuren bezorging</h2>
             <p>Vaak op pad? bepaal zelf waar we je pakketen bezorgen</p>
-            <a class="link-border-preference">Link</a>
+            <a href="#" class="link-border-preference">Link</a>
         </section>
 
         <section class="worldwide">
             <img src="img/building.svg" alt="afbeelding" width="100px">
             <h2>Track & trace wereldwijd</h2>
             <p>Track & trace ook op de kleinste pakjes naar het buitenland. Naar wel 75 landen</p>
-            <a class="link-border-worldwide">Link</a>
+            <a href="#" class="link-border-worldwide">Link</a>
         </section>
 
         <section class="stamp">
             <img src="img/phone.svg" alt="afbeelding" width="100px">
             <h2>Nu 1 postzegel nodig?</h2>
             <p>Verstuur je brief of kaart met een Postzegelcode</p>
-            <a class="link-border-stamp">Link</a>
+            <a href="#" class="link-border-stamp">Link</a>
         </section>
 
         <section class="photocard">
@@ -128,7 +128,7 @@
                 voor. Ben jij de volgende? Download'm nu!</p>
             <div>
                 <button class="button2">Fotokaart versturen</button>
-                <a>Link</a>
+                <a href="#">Link</a>
                 <img class="img-arrow" src="img/arrowright.svg" alt="">
             </div>
         </section>
@@ -145,7 +145,7 @@
             <h2>Veel post versturen</h2>
             <p>Gemakkelijk en voordelig grote hoeveelheden post tegelijk versturen.</p>
             <div>
-                <a>Lees over partijenpost</a>
+                <a href="#">Lees over partijenpost</a>
                 <img class="img-arrow" src="img/arrowright.svg" alt="">
             </div>
         </section>
@@ -155,7 +155,7 @@
             <h2>Altijd de juiste logistieke oplossingen</h2>
             <p>Als je op zoek bent naar groot of gekoeld transport. Of installatie en montage van artikelen.</p>
             <div>
-                <a>Bekijk de mogelijkheden</a>
+                <a href="#">Bekijk de mogelijkheden</a>
                 <img class="img-arrow" src="img/arrowright.svg" alt="">
             </div>
         </section>
